fix: fixed title masked on mobile devices

--- a/theme-chic/css/media.styl
+++ b/theme-chic/css/media.styl
@@ -143,6 +143,8 @@
     // padding-top: 6em
     .archive-item-date
       display: none
+    .post-header
+      margin-top: 100px
       
   .archive
     margin-top 4em
